# eosix

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml
migrations/2025-06-19-031956_create_quotes/: up.sql
resources/: quotes.json
src/: cli.rs  main.rs  schema.rs
src/cli/: args.rs  cli.rs  mod.rs
src/db/: db.rs  mod.rs
src/handlers/: add.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/models/: cli_models.rs  mod.rs  quote_models.rs
src/modules/: mod.rs  quotes_mod.rs  traits_mod.rs
src/storage/: db.rs  mod.rs
src/tools/: mod.rs  quotes_tools.rs
